docs/v4.0.0/_sources/gallery/extras/properties_cylinder.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/extras/properties_cylinder.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_extras_properties_cylinder.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_extras_properties_cylinder.py:


Print properties
================

This example demonstrates the computation of scattering properties using PyMieSim.

.. GENERATED FROM PYTHON SOURCE LINES 9-10

Importing the package: PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 10-29

.. code-block:: Python

    from PyMieSim.units import ureg
    from PyMieSim.single.scatterer import Cylinder
    from PyMieSim.single.source import Gaussian

    source = Gaussian(
        wavelength=750 * ureg.nanometer,  # 750 nm
        polarization=30 * ureg.degree,  # Right circular polarization
        optical_power=1 * ureg.watt,  # Power in watt
        NA=0.3 * ureg.AU,  # Numerical Aperture
    )

    scatterer = Cylinder(
        diameter=300 * ureg.nanometer,  # 300 nm
        source=source,
        refractive_index=(1.4 + 0.1j) * ureg.RIU,
        medium_refractive_index=1.33 * ureg.RIU,
    )

    scatterer.print_properties(4)








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.042 seconds)


.. _sphx_glr_download_gallery_extras_properties_cylinder.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: properties_cylinder.ipynb <properties_cylinder.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: properties_cylinder.py <properties_cylinder.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: properties_cylinder.zip <properties_cylinder.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
